<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <LinearLayout
        style="@style/status_bar"
        android:background="@color/gray"
        android:weightSum="4">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_medium_56"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">
            <TextView
                style="@style/status_bar_text.value"
                android:text="@string/app_num"/>
            <TextView
                style="@style/status_bar_text"
                android:text="@string/elo"/>
        </LinearLayout>

        <View style="@style/view_line.vertical"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_medium_56"
            android:orientation="vertical"
            android:layout_weight="2"
            android:gravity="center">

            <TextView
                style="@style/status_bar_text.value"
                android:text="@string/app_num"/>

            <TextView
                style="@style/status_bar_text"
                android:text="@string/string_num"/>
        </LinearLayout>

        <View style="@style/view_line.vertical"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="@dimen/size_medium_56"
            android:orientation="vertical"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                style="@style/status_bar_text.value"
                android:text="@string/app_num"/>

            <TextView
                style="@style/status_bar_text"
                android:text="@string/proj"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        style="@style/liner_layout_main">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_call_black_24dp"
            />
        <LinearLayout
            style="@style/liner_layout">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/text"
                    android:hint="@string/phone_hint"
                    android:text="@string/phone_text"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_phone_in_talk_black_24dp"
             />
    </LinearLayout>

    <View style="@style/view_line.horizontal"/>

    <LinearLayout
        style="@style/liner_layout_main">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_email_black_24dp"
            />
        <LinearLayout
            style="@style/liner_layout">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/text"
                    android:hint="@string/email_hint"
                    android:text="@string/email_text"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"
            />
    </LinearLayout>

    <View style="@style/view_line.horizontal"/>

    <LinearLayout
        style="@style/liner_layout_main">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/vk"
            />
        <LinearLayout
            style="@style/liner_layout">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/text"
                    android:hint="@string/vk_hint"
                    android:text="@string/vk_text"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_remove_red_eye_black_24dp"
            />
    </LinearLayout>

    <View style="@style/view_line.horizontal"/>

    <LinearLayout
        style="@style/liner_layout_main">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/github_circle"
            />
        <LinearLayout
            style="@style/liner_layout">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/text"
                    android:hint="@string/rep_hint"
                    android:text="@string/rep_text"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_remove_red_eye_black_24dp"
            />
    </LinearLayout>

    <View style="@style/view_line.horizontal"/>

    <LinearLayout
        style="@style/liner_layout_main">
        <ImageView
            style="@style/icon.left"
            android:src="@drawable/ic_account_circle_black_24dp"
            />
        <LinearLayout
            style="@style/liner_layout">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    style="@style/text"
                    android:hint="@string/about_hint"
                    android:text="@string/about_text"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
